# WEB_DZ_8

./: README.md  main.py  pyproject.toml
HW_1/: homework.py  models.py
HW_2/: consumer.py  models.py  producer.py
